# lab1

./: README.md
.github/workflows/: ci.yml
01_tests/: 00_add.c  01_simple_print.c  02_simple_marco.c  03_gtest_simple.cpp  04_gtest_fixtures.cpp  05_gmock.cpp  06_python.py  07_cov.sh  CMakeLists.txt
02_debugger/: 01_example.c  enable_coredump.sh
03_code_analyze/: 01_oob.c  02_nullptr_typo.c  03_uninit_var.c  04_zero_div.c  05_switch.c  06_oos.c  07_leak.c  08_uint_underflow.c  09_invalid_cond.c  10_while_typo.c  11_invalid_logical_cond.c  12_string_literal.c  13_race_condition.cpp  CMakeLists.txt
04_profile/: 01_benchmark.cpp  02_benchmark_fixture.cpp  03_create_flamegraph.sh  CMakeLists.txt  script.lua
05_hw/: CMakeLists.txt  README.md  benchmark_stack.c  main.c  stack.c  stack.h  test.c
05_hw/.github/workflows/: ci.yml
